# BridgeTrace-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAILURE_SCENARIOS.md  INSTALLATION.md  Makefile  Quick start.md  README.md  SCALING_STRATEGY.md  SECURITY.md  SLA.md  SYSTEM_DESIGN.md  THREAT_MODEL.md  VERSIONING.md  alembic.ini  bridge_trace_sdk.py  docker-compose.yml  index.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml  sdk-release.yml  security.yml  test.yml
api/: main.py
app/: main.py
app/analytics/: __init__.py  risk_propagation.py
app/api/: dependencies.py
app/api/routes/: ai.py  demo.py  health.py  playground.py  (+3 more)
app/backends/: __init__.py  graph_backend.py
app/core/: config.py  enterprise.py  exceptions.py  logging.py  metrics.py  security.py
app/metrics/: __init__.py  graph_stats.py  latency.py  tracing_stats.py
app/schemas/: node.py  risk.py  simulate.py  trace.py
app/services/: ai_service.py  risk_service.py  trace_service.py
core/: audit_logger.py  config.py  entity_linker.py  explainability.py  graph_builder.py  pipeline.py  risk_scoring.py  trace_engine.py
data/: README.md  bank_accounts.json  crypto_transactions.json  crypto_wallets.json  entity_metadata.json  pix_transactions.json
data/public/: bridgetrace_synthetic_financial_dataset_v1.jsonl
docs/: ALGORITHM.md  API_REFERENCE.md  ARCHITECTURE.md  COMPETITIVE_COMPARISON.md  COMPLIANCE_READINESS.md  DEPLOYMENT.md  DEVELOPMENT.md  DISTRIBUTION_ROADMAP.md  FORTUNE500_TIER1_ENHANCEMENTS.md  INSTALLATION.md  PERFORMANCE_PROOF.md  QUICKSTART_5MIN.md  SDK_PUBLISHING.md
docs/datasets/: BRIDGETRACE_SYNTHETIC_DATASET_V1.md
docs/papers/: BRIDGETRACE_TECHNICAL_PAPER_V1.md  SCIENTIFIC_CHANGELOG.md  WHITEPAPER_FORMAL_V1_0.md
examples/: run_demo.py
examples/scripts/: basic_trace.py
frontend/: playground.html  tier1_dashboard.html
monitoring/: prometheus.yml
scripts/: benchmark_risk_engine.py  bt_cli.py  generate_public_dataset_v1.py  generate_synthetic_data.py  init_db.sql  run_external_proof.sh
sdk/js/: index.js  package.json
sdk/python/: pyproject.toml
sdk/python/bridgetrace_sdk/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
tests/: conftest.py  test_pipeline.py
tests/unit/: test_demo_and_dataset.py  test_enterprise_controls.py  test_exceptions.py  test_external_proof.py  test_health.py  test_playground.py  test_professional_api.py  test_risk_propagation.py  test_services.py  test_trace.py
