[tool.poetry]
name = "bridgetrace-ai"
version = "2.0.0"
description = "Enterprise-grade Financial Traceability Engine with AI"
authors = ["Felipe de Oliveira Fernandes <felipe@bridgetrace.ai>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/felipeofdev-ai/BridgeTrace-AI"
keywords = ["fintech", "blockchain", "pix", "graph-theory", "ai", "compliance"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-multipart = "^0.0.17"
networkx = "^3.4"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
httpx = "^0.27.0"
redis = "^5.1.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
aiofiles = "^24.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"
