[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgetrace-sdk"
version = "0.1.0"
description = "Official Python SDK for BridgeTrace API"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["bridgetrace_sdk*"]
