[package]
name = "bridgetrace-sdk-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Official Rust SDK for BridgeTrace API"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
